PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/ProcessProduct__c.object-meta.xml
<CustomObject>
    <label>생산공정</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>생산공정 코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>