PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/CntProduct__c.field-meta.xml
<CustomField>
    <fullName>CntProduct__c</fullName>
    <description>생산공장완료시 트리거를 통해 집계됨</description>
    <label>생산수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>