PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>날짜</label>
    <required>true</required>
    <type>Date</type>
</CustomField>