PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/PartList__c.field-meta.xml
<CustomField>
    <fullName>PartList__c</fullName>
    <label>PartList</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>