PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/PartListSimple__c.field-meta.xml
<CustomField>
    <fullName>PartListSimple__c</fullName>
    <label>PartListSimple</label>
    <length>250</length>
    <type>Text</type>
</CustomField>