PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/ProcessInfo__c.field-meta.xml
<CustomField>
    <fullName>ProcessInfo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>공정정보</label>
    <referenceTo>ProcessInfo__c</referenceTo>
    <relationshipLabel>생산공정</relationshipLabel>
    <relationshipName>ProcessProduct</relationshipName>
    <type>Lookup</type>
</CustomField>