PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/ProcessMachine__c.field-meta.xml
<CustomField>
    <fullName>ProcessMachine__c</fullName>
    <label>공정기계 정보</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001공정기계1</fullName>
                <default>true</default>
                <label>001공정기계1</label>
            </value>
            <value>
                <fullName>002공정기계2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>