PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/ProcessProductDetailCount__c.field-meta.xml
<CustomField>
    <fullName>ProcessProductDetailCount__c</fullName>
    <label>생산공정상세갯수</label>
    <summaryForeignKey>ProcessProductDetail__c.ProcessProduct__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>