PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/Smtset_Key__c.field-meta.xml
<CustomField>
    <fullName>Smtset_Key__c</fullName>
    <description>Tracebility smtset의 seq가 2개가 _를 구분으로 들어간다.
예) 31_32
한개일 경우는 1개만 구분자 없이 들어간다.
구분자가 있는 경우 해당하는 Smtset_Key의 2개의 Partlist를 합치도록 한다. (트리거처리)</description>
    <externalId>true</externalId>
    <label>Smtset_Key</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>