PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>준비</fullName>
                <default>true</default>
                <label>준비</label>
            </value>
            <value>
                <fullName>진행</fullName>
            </value>
            <value>
                <fullName>완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>