PA_Education/TestMenifest/force-app/main/default/objects/ProcessProduct__c/fields/TraceabilitySmtsetId__c.field-meta.xml
<CustomField>
    <fullName>TraceabilitySmtsetId__c</fullName>
    <externalId>true</externalId>
    <label>TraceabilitySmtsetId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>